# Copyright 2024 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("quic_client") {
  testonly = true
  sources = [
    "third_party/quiche/src/quiche/quic/tools/quic_client_bin.cc",
    "third_party/quiche/src/quiche/quic/tools/quic_epoll_client_factory.cc",
    "third_party/quiche/src/quiche/quic/tools/quic_epoll_client_factory.h",
  ]

  deps = [
    "//third_party/abseil-cpp:absl",
    "//third_party/boringssl",
    "//third_party/quiche:epoll_tool_support",
    "//third_party/quiche:quic_client_core",
    "//third_party/quiche:quiche",
    "//third_party/quiche:quiche_tool_support",
  ]
}
